# GAT_for_DOGM

./: .gitignore  README.md  Readme.txt  gatNcrossattention.py  gat_train_stgat_dogm.py  sigma_diagnostics.py  visualize_v6.py
src/: CMakeLists.txt  package.xml
src/config/: params.yaml
src/include/dogm_ros/: dynamic_grid_map.h  ego_calibration.h  particle_filter.h  radar_merge.h  radar_velocity_viz.h  structures.h
src/launch/: dogm.launch  dogm_gat.launch
src/models/: model.py
src/msg/: FilteredSigma.msg
src/rviz/: dogm.rviz
src/scripts/: gat_transformer_node.py  train.py
src/src/: dogm_node.cpp  dynamic_grid_map.cpp  ego_calibration.cpp  particle_filter.cpp  radar_merge.cpp  radar_velocity_viz.cpp
v6_inferenceNtrain_v234/: README.md
